--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,17 @@
 flask==2.0.1
 flask-cors==3.0.10
-pillow==8.3.1
+Pillow==9.5.0
 textblob==0.15.3
 language-tool-python==2.7.1
 requests==2.26.0
-pandas==1.3.3
+numpy==1.24.4
+pandas==1.5.3
 SpeechRecognition==3.8.1
 pyttsx3==2.90
 eng-to-ipa==0.0.2
 azure-cognitiveservices-vision-computervision==0.9.0
 msrest==0.6.21
 abydos==0.5.0
+gunicorn==20.1.0
+Werkzeug==2.0.3
+pytesseract==0.3.10
