added register and login

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,22 +1,26 @@
-# Python
+node_modules
+npm-debug.log
+.git
+.gitignore
+*.md
+.env
 __pycache__
 *.pyc
 *.pyo
 *.pyd
+.Python
 env/
 venv/
-build/
-dist/
-.pytest_cache
-
-# Git
-.git
-
-# Node
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
 frontend/node_modules
 frontend/build
-
-# Data and models
-data/
-model_training/
-*.sav
+backend/__pycache__
+*.log
+temp_*.jpg
+temp_*.wav
+temp_*.webm
